tests/syntax/type-metaclass.tea
#main

internal TestForMetaClass0 {
	prop = 'some'

	static test_class_argument(class TestForMetaClass0.Type) {
		var_dump(class)
	}
}

internal TestForMetaClass1: TestForMetaClass0 {
	//
}

internal TestForMetaClass2 {
	//
}

TestForMetaClass0.test_class_argument(TestForMetaClass0)  // OK
TestForMetaClass0.test_class_argument(TestForMetaClass1)  // OK
// TestForMetaClass0.test_class_argument(TestForMetaClass2) // error

